# webSpeechSQA

./: .env.dev  Dockerfile  docker-compose.yml  pyproject.toml
src/: manage.py
src/webSpeechSQA/: asgi.py  settings.py  urls.py  wsgi.py
