[tool.poetry]
name = "webspeechsqa"
version = "0.1.0"
description = "Web based subjective speech quality assesment"
authors = ["Wataru Nakata <wataru9871@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
